# SFS

./: .gitignore  CMakeLists.txt
src/: log.cpp
src/include/: log.hpp
tests/: log.cpp
